--- a/Infinity Games/projeto infinity/src/view/Registrar.form
+++ b/Infinity Games/projeto infinity/src/view/Registrar.form
@@ -92,6 +92,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="campoSeg">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="campoSegActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="33" y="140" width="280" height="-1"/>
